# selection_admix

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  Admix_EAS.ipynb  Admix_EAS.py  README.md  Resample_example.ipynb  admixture_proportions.txt  fit_model.py  mre.py  pyproject.toml  snp_acs.raw
bmws/: __init__.py  betamix.py  cli.py  estimate.py  sim.py
data/: afr_sample_info.txt  afr_snp_acs.raw  afr_snps.txt  eas_sample_info.txt  eas_snp_acs.nosex  eas_snp_acs.raw  eas_snps.txt  eur_k3_sample_info.txt  eur_sample_info.txt  eur_snp_acs.nosex  eur_snp_acs.raw  eur_snps.txt  sam_sample_info.txt  sam_snp_acs.nosex  sam_snp_acs.raw  sam_snps.txt  sas_sample_info.txt  sas_snp_acs.raw  sas_snps.txt
paper/: LCT_data_analyis.ipynb  admix.ipynb
profiles/cluster/: config.yaml
profiles/cluster_local/: config.yaml
profiles/cluster_penn/: config.yaml
profiles/cluster_umich/: config.yaml
profiles/local/: config.yaml
scripts/: toy.py
src/bmws/: __init__.py  betamix.py  cli.py  common.py  data.py  estimate.py  flsa.py  infer.py  pf.py  sim.py  timer.py  util.py
tests/: conftest.py  test_betamix.py  test_data.py  test_estimate.py  test_infer.py  test_loglik.py  test_misc.py  test_sim.py
workflow/: Snakefile
