[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[project]
name = "bmws_admix"
description = "Default template for PDM package"
authors = [
    {name = "Jonathan Terhorst", email = "jonth@umich.edu"},
    {name = "Iain Mathieson", email="mathi@pennmedicine.upenn.edu"},
]
dependencies = [
    "matplotlib<4,>=3",
    "numpy>=1.20",
    "scipy>=1.12",
    "jax[cuda12]>=0.5",
    "jaxopt>=0.8.3",
    "loguru>=0.7.2",
    "platformdirs>=4.2.2",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "notebook>=7",
    "statsmodels>=0.14.4",
    "equinox>=0.11.12",
    "interpax>=0.3.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.scripts]
bmws = "bmws.cli:bmws_main"

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2.1",
    "pandas>=2.2.2",
    "jupytext>=1.16.2",
    "joblib>=1.4.2",
    "snakemake>=9.1.11",
    "snakefmt>=0.11.0",
    "snakemake-executor-plugin-slurm>=1.2.1",
]
